@@ -11,8 +11,10 @@ import org.apache.commons.lang3.StringUtils;
 import org.gridsuite.directory.server.dto.AccessRightsAttributes;
 import org.gridsuite.directory.server.dto.ElementAttributes;
 import org.gridsuite.directory.server.dto.RootDirectoryAttributes;
+import org.gridsuite.directory.server.dto.elasticsearch.DirectoryElementInfos;
 import org.gridsuite.directory.server.repository.DirectoryElementEntity;
 import org.gridsuite.directory.server.repository.DirectoryElementRepository;
+import org.gridsuite.directory.server.services.DirectoryElementInfosService;
 import org.gridsuite.directory.server.services.DirectoryRepositoryService;
 import org.gridsuite.directory.server.services.ElementType;
 import org.gridsuite.directory.server.services.StudyService;
@@ -30,6 +32,7 @@ import java.time.ZonedDateTime;
 import java.time.temporal.ChronoUnit;
 import java.util.*;
 import java.util.function.Consumer;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static org.gridsuite.directory.server.DirectoryException.Type.*;
@@ -55,11 +58,15 @@ public class DirectoryService {
 
     private final DirectoryRepositoryService repositoryService;
 
+    private final DirectoryElementInfosService directoryElementInfosService;
+
     public DirectoryService(DirectoryRepositoryService repositoryService,
-                            StudyService studyService, NotificationService notificationService) {
+                            StudyService studyService, NotificationService notificationService,
+                            DirectoryElementInfosService directoryElementInfosService) {
         this.repositoryService = repositoryService;
         this.studyService = studyService;
         this.notificationService = notificationService;
+        this.directoryElementInfosService = directoryElementInfosService;
     }
 
     /* notifications */
@@ -229,7 +236,7 @@ public class DirectoryService {
         return subdirectoriesCountsMap;
     }
 
-    public List<ElementAttributes> getDirectoryElements(UUID directoryUuid, String userId, List<ElementType> types, boolean stashed) {
+    public List<ElementAttributes> getDirectoryElements(UUID directoryUuid, String userId, List<ElementType> types) {
         ElementAttributes elementAttributes = getElement(directoryUuid);
         if (elementAttributes == null) {
             throw DirectoryException.createElementNotFound(ElementType.DIRECTORY.name(), directoryUuid);
@@ -239,25 +246,16 @@ public class DirectoryService {
             return List.of();
         }
 
-        return getDirectoryElementsStream(directoryUuid, userId, types, stashed).toList();
+        return getDirectoryElementsStream(directoryUuid, userId, types).collect(Collectors.toList());
     }
 
     private Stream<ElementAttributes> getDirectoryElementsStream(UUID directoryUuid, String userId, List<ElementType> types) {
-        return getDirectoryElementsStream(directoryUuid, userId, types, false);
-    }
-
-    private Stream<ElementAttributes> getDirectoryElementsStream(UUID directoryUuid, String userId, List<ElementType> types, boolean stashed) {
-        return getAllDirectoryElementsStream(directoryUuid, types, userId, stashed)
+        return getAllDirectoryElementsStream(directoryUuid, types, userId)
                 .filter(elementAttributes -> !elementAttributes.getType().equals(ElementType.DIRECTORY) || elementAttributes.isAllowed(userId));
     }
 
     private Stream<ElementAttributes> getAllDirectoryElementsStream(UUID directoryUuid, List<ElementType> types, String userId) {
-        return getAllDirectoryElementsStream(directoryUuid, types, userId, false);
-    }
-
-    private Stream<ElementAttributes> getAllDirectoryElementsStream(UUID directoryUuid, List<ElementType> types, String userId, boolean stashed) {
-        LocalDateTime stashDate = stashed ? getDirectoryElementEntity(directoryUuid).getStashDate() : null;
-        List<DirectoryElementEntity> directoryElements = repositoryService.findAllByParentIdAndStashedAndStashDate(directoryUuid, stashed, stashDate);
+        List<DirectoryElementEntity> directoryElements = repositoryService.findAllByParentId(directoryUuid);
         Map<UUID, Long> subdirectoriesCountsMap = getSubDirectoriesCountMap(userId, types, directoryElements);
         return directoryElements
                 .stream()
@@ -284,9 +282,9 @@ public class DirectoryService {
     public void updateElement(UUID elementUuid, ElementAttributes newElementAttributes, String userId) {
         DirectoryElementEntity directoryElement = getDirectoryElementEntity(elementUuid);
         if (!isElementUpdatable(toElementAttributes(directoryElement), userId, false) ||
-            !directoryElement.isAttributesUpdatable(newElementAttributes, userId) ||
-            !directoryElement.getName().equals(newElementAttributes.getElementName()) &&
-             directoryHasElementOfNameAndType(directoryElement.getParentId(), userId, newElementAttributes.getElementName(), directoryElement.getType())) {
+                !directoryElement.isAttributesUpdatable(newElementAttributes, userId) ||
+                !directoryElement.getName().equals(newElementAttributes.getElementName()) &&
+                        directoryHasElementOfNameAndType(directoryElement.getParentId(), userId, newElementAttributes.getElementName(), directoryElement.getType())) {
             throw new DirectoryException(NOT_ALLOWED);
         }
 
@@ -376,18 +374,18 @@ public class DirectoryService {
 
     private boolean directoryHasElementOfNameAndType(UUID directoryUUID, String userId, String elementName, ElementType elementType) {
         return getDirectoryElementsStream(directoryUUID, userId, List.of(elementType))
-            .anyMatch(
-                e -> e.getElementName().equals(elementName)
-            );
+                .anyMatch(
+                        e -> e.getElementName().equals(elementName)
+                );
     }
 
     private boolean isElementUpdatable(ElementAttributes element, String userId, boolean forDeletion) {
         if (element.getType().equals(ElementType.DIRECTORY)) {
             return element.isAllowed(userId) &&
-                (!forDeletion || getDirectoryElementsStream(element.getElementUuid(), userId, List.of())
-                    .filter(e -> e.getType().equals(ElementType.DIRECTORY))
-                    .allMatch(e -> isElementUpdatable(e, userId, true))
-                );
+                    (!forDeletion || getDirectoryElementsStream(element.getElementUuid(), userId, List.of())
+                            .filter(e -> e.getType().equals(ElementType.DIRECTORY))
+                            .allMatch(e -> isElementUpdatable(e, userId, true))
+                    );
         } else {
             return getParentElement(element.getElementUuid()).isAllowed(userId);
         }
@@ -429,38 +427,56 @@ public class DirectoryService {
         getAllDirectoryElementsStream(elementUuid, List.of(), userId).forEach(elementAttributes -> deleteElement(elementAttributes, userId));
     }
 
-    /***
-     * Retrieve path of an element
-     * @param elementUuid element uuid
-     * @param userId owner
-     * @return ElementAttributes of element and all it's parents up to root directory
+    /**
+     * Method to delete multiple elements within a single repository - DIRECTORIES can't be deleted this way
+     * @param elementsUuids list of elements uuids to delete
+     * @param parentDirectoryUuid expected parent uuid of each element - element with another parent UUID won't be deleted
+     * @param userId user making the deletion
      */
-    public List<ElementAttributes> getPath(UUID elementUuid, String userId) {
-        Optional<DirectoryElementEntity> currentElementOpt = repositoryService.getElementEntity(elementUuid);
-        ArrayList<ElementAttributes> path = new ArrayList<>();
-        boolean allowed;
-        if (currentElementOpt.isEmpty()) {
-            throw DirectoryException.createElementNotFound(ELEMENT, elementUuid);
-        }
-        DirectoryElementEntity currentElement = currentElementOpt.get();
-
-        if (currentElement.getType().equals(ElementType.DIRECTORY)) {
-            allowed = toElementAttributes(currentElement).isAllowed(userId);
-        } else {
-            allowed = toElementAttributes(repositoryService.getElementEntity(currentElement.getParentId()).orElseThrow()).isAllowed(userId);
-        }
-
-        if (!allowed) {
+    public void deleteElements(List<UUID> elementsUuids, UUID parentDirectoryUuid, String userId) {
+        ElementAttributes parentDirectory = getElement(parentDirectoryUuid);
+        // checking if parent uuid can be updated by user
+        if (!parentDirectory.isAllowed(userId)) {
             throw new DirectoryException(NOT_ALLOWED);
         }
 
-        path.add(toElementAttributes(currentElement));
+        // getting elements by "elementUuids", filtered if they don't belong to parentDirectoryUuid, or if they are directories
+        List<ElementAttributes> elementsAttributesToDelete = repositoryService.getElementEntities(elementsUuids, parentDirectoryUuid).stream()
+                .map(ElementAttributes::toElementAttributes)
+                .toList();
 
-        while (currentElement.getParentId() != null) {
-            currentElement = repositoryService.getElementEntity(currentElement.getParentId()).orElseThrow();
-            ElementAttributes currentElementAttributes = toElementAttributes(currentElement);
-            path.add(currentElementAttributes);
-        }
+        // deleting all elements
+        repositoryService.deleteElements(elementsAttributesToDelete.stream().map(ElementAttributes::getElementUuid).toList());
+
+        // extracting studyUuids from this list, to send specific notifications
+        elementsAttributesToDelete.stream()
+                .filter(element -> ElementType.STUDY.equals(element.getType())).map(ElementAttributes::getElementUuid)
+                .forEach(studyUuid -> notificationService.emitDeletedStudy(studyUuid, userId));
+
+        // sending directory update notification
+        boolean isPrivate = repositoryService.isPrivateDirectory(parentDirectoryUuid);
+        notificationService.emitDirectoryChanged(
+                parentDirectoryUuid,
+                null,
+                userId,
+                null,
+                isPrivate,
+                false,
+                NotificationType.UPDATE_DIRECTORY
+        );
+    }
+
+    /***
+     * Retrieve path of an element
+     * @param elementUuid element uuid
+     * @return ElementAttributes of element and all it's parents up to root directory
+     */
+    public List<ElementAttributes> getPath(UUID elementUuid) {
+        DirectoryElementEntity currentElement = repositoryService.getElementEntity(elementUuid)
+                .orElseThrow(() -> DirectoryException.createElementNotFound(ELEMENT, elementUuid));
+
+        List<ElementAttributes> path = new ArrayList<>(List.of(toElementAttributes(currentElement)));
+        path.addAll(repositoryService.findAllAscendants(elementUuid).stream().map(ElementAttributes::toElementAttributes).toList());
 
         return path;
     }
@@ -474,14 +490,9 @@ public class DirectoryService {
     }
 
     private ElementAttributes getParentElement(UUID elementUuid) {
-        return Stream.of(repositoryService.getParentUuid(elementUuid))
-            .filter(Objects::nonNull)
-            .map(repositoryService::getElementEntity)
-            .filter(Optional::isPresent)
-            .map(Optional::get)
-            .map(ElementAttributes::toElementAttributes)
-            .findFirst()
-            .orElseThrow(() -> DirectoryException.createElementNotFound("Parent of", elementUuid));
+        return repositoryService.getElementEntity(repositoryService.getParentUuid(elementUuid))
+                .map(ElementAttributes::toElementAttributes)
+                .orElseThrow(() -> DirectoryException.createElementNotFound(ElementType.DIRECTORY.name(), elementUuid));
     }
 
     private boolean isPrivateForNotification(UUID parentDirectoryUuid, Boolean isCurrentElementPrivate) {
@@ -507,17 +518,17 @@ public class DirectoryService {
     }
 
     public List<ElementAttributes> getElements(List<UUID> ids, boolean strictMode, List<ElementType> types) {
-        List<DirectoryElementEntity> elementEntities = repositoryService.findAllByIdInAndStashed(ids, false);
+        List<DirectoryElementEntity> elementEntities = repositoryService.findAllByIdIn(ids);
 
         if (strictMode && elementEntities.size() != ids.stream().distinct().count()) {
             throw new DirectoryException(NOT_FOUND);
         }
 
-        Map<UUID, Long> subElementsCount = getSubElementsCount(elementEntities.stream().map(DirectoryElementEntity::getId).toList(), types);
+        Map<UUID, Long> subElementsCount = getSubElementsCount(elementEntities.stream().map(DirectoryElementEntity::getId).collect(Collectors.toList()), types);
 
         return elementEntities.stream()
                 .map(attribute -> toElementAttributes(attribute, subElementsCount.getOrDefault(attribute.getId(), 0L)))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public void notify(@NonNull String notificationName, @NonNull UUID elementUuid, @NonNull String userId) {
@@ -563,6 +574,10 @@ public class DirectoryService {
                 });
     }
 
+    public boolean isPathAccessible(String userId, List<ElementAttributes> pathElements) {
+        return pathElements.stream().allMatch(e -> !ElementType.DIRECTORY.equals(e.getType()) || e.isAllowed(userId));
+    }
+
     private String nameCandidate(String elementName, int n) {
         return elementName + '(' + n + ')';
     }
@@ -582,180 +597,39 @@ public class DirectoryService {
         return nameCandidate(elementName, i);
     }
 
+    private Pair<List<UUID>, List<String>> getUuidsAndNamesFromPath(List<ElementAttributes> elementAttributesList) {
+        List<UUID> uuids = new ArrayList<>(elementAttributesList.size());
+        List<String> names = new ArrayList<>(elementAttributesList.size());
+        elementAttributesList.stream()
+                .filter(elementAttributes -> Objects.equals(elementAttributes.getType(), ElementType.DIRECTORY))
+                .forEach(e -> {
+                    uuids.add(e.getElementUuid());
+                    names.add(e.getElementName());
+                });
+        return Pair.of(uuids, names);
+    }
+
     @Transactional
     public void reindexAllElements() {
         repositoryService.reindexAllElements();
     }
 
-    private List<DirectoryElementEntity> getEntitiesToRestore(List<DirectoryElementEntity> entities,
-                                                              List<DirectoryElementEntity> rejectedEntities,
-                                                              String userId,
-                                                              boolean isParentPrivate) {
-        if (isParentPrivate) {
-            return getEntitiesCreatedBySameUser(entities, rejectedEntities, userId);
-        }
-
-        return entities.stream()
-                .filter(entity -> {
-                    boolean isPublicElement = entity.getIsPrivate() == null ? !getParentElement(entity.getId()).getAccessRights().isPrivate() : !entity.getIsPrivate();
-                    boolean isUpdatable = Objects.equals(userId, entity.getOwner()) || isPublicElement;
-                    if (!isUpdatable) {
-                        rejectedEntities.add(entity);
-                    }
-                    return isUpdatable;
-                })
-                .toList();
-    }
-
-    public void restoreElements(List<UUID> elementsUuid, UUID parentUuid, String userId) {
-        // Get parent directory
-        ElementAttributes parent = getElement(parentUuid);
-        if (parent == null) {
-            throw new DirectoryException(NOT_FOUND, String.format("The directory '%s' not found !", parentUuid));
-        }
-
-        // Get all updatable entities. Entities should be public or created by the user, so it can be restored
-        List<DirectoryElementEntity> notUpdatableEntities = new ArrayList<>();
-        List<DirectoryElementEntity> allStashedElements = repositoryService.findAllStashedElements(elementsUuid, true, userId);
-        List<DirectoryElementEntity> updatableEntities = getEntitiesToRestore(allStashedElements, notUpdatableEntities, userId, parent.getAccessRights().isPrivate());
-
-        List<DirectoryElementEntity> entities = updatableEntities
+    public List<DirectoryElementInfos> searchElements(@NonNull String userInput, String userId) {
+        return directoryElementInfosService.searchElements(userInput)
                 .stream()
-                .flatMap(entity -> {
-                    entity.setParentId(parentUuid);
-                    entity.setName(getDuplicateNameCandidate(parentUuid, entity.getName(), entity.getType(), userId));
-
-                    // Retrieve descendants of the current entity
-                    List<DirectoryElementEntity> descendants = getEntitiesToRestore(
-                            repositoryService.findAllDescendantsWithSameStashDate(entity.getId(), userId),
-                            notUpdatableEntities,
-                            userId,
-                            parent.getAccessRights().isPrivate());
-
-                    // Combine parent and descendants into a single list
-                    List<DirectoryElementEntity> result = new ArrayList<>();
-                    result.add(entity);
-                    result.addAll(descendants);
-
-                    return result.stream().map(e -> e.stashElement(false, null));
-                })
-                .toList();
-
-        repositoryService.saveRestoredElements(entities);
-        notificationService.emitDirectoryChanged(
-                parentUuid,
-                parent.getElementName(),
-                userId,
-                null,
-                parent.getAccessRights().isPrivate(),
-                parentUuid == null,
-                NotificationType.UPDATE_DIRECTORY
-        );
-        emitDirectoryChangedNotification(parentUuid, userId);
-        if (!notUpdatableEntities.isEmpty()) {
-            throw new DirectoryException(NOT_ALLOWED);
-        }
-    }
-
-    public void stashElements(List<UUID> elementsUuid, String userId) {
-        // we add the same stash date to all the elements that are deleted together
-        LocalDateTime stashDate = LocalDateTime.now();
-        List<DirectoryElementEntity> entities = repositoryService.findAllByIdInAndStashed(elementsUuid, false);
-        List<DirectoryElementEntity> notUpdatableEntities = new ArrayList<>();
-        List<DirectoryElementEntity> updatableEntities = getEntitiesCreatedBySameUser(entities, notUpdatableEntities, userId);
-
-        repositoryService.saveStashedElements(updatableEntities.stream()
-                .flatMap(entity -> {
-                    List<DirectoryElementEntity> descendants = repositoryService.findAllDescendants(entity.getId(), userId);
-                    // Combine parent and descendants into a single list
-                    List<DirectoryElementEntity> result = new ArrayList<>();
-                    result.add(entity);
-                    result.addAll(descendants);
-                    return result.stream().map(e -> {
-                        DirectoryElementEntity stashedElement = e.stashElement(true, stashDate);
-                        if (Objects.equals(e.getType(), ElementType.STUDY)) {
-                            notificationService.emitDeletedStudy(entity.getId(), userId);
-                        }
-                        return stashedElement;
-                    });
-                })
-                .toList());
-
-        updatableEntities.forEach(entity -> {
-            UUID parentUuid = repositoryService.getParentUuid(entity.getId());
-            notificationService.emitDirectoryChanged(
-                    parentUuid == null ? entity.getId() : parentUuid,
-                    entity.getName(),
-                    userId,
-                    null,
-                    entity.getIsPrivate(),
-                    parentUuid == null,
-                    parentUuid == null ? NotificationType.DELETE_DIRECTORY : NotificationType.UPDATE_DIRECTORY
-            );
-        });
-
-        if (!notUpdatableEntities.isEmpty()) {
-            throw new DirectoryException(NOT_ALLOWED,
-                    String.format("Some or all of the elements can not be deleted : %s",
-                            String.join(", ", notUpdatableEntities.stream().map(DirectoryElementEntity::getName).toList())));
-        }
-    }
-
-    public List<Pair<ElementAttributes, Long>> getStashedElements(String userId) {
-        List<DirectoryElementEntity> entities = repositoryService.getElementsStashed(userId);
-        return entities.stream()
-                .map(entity -> Pair.of(toElementAttributes(entity), repositoryService.countDescendants(entity.getId(), userId) - 1))
-                .toList();
-    }
-
-    public void deleteElements(List<UUID> elementsUuid, String userId) {
-        // Get all updatable entities
-        List<DirectoryElementEntity> notUpdatableEntities = new ArrayList<>();
-        List<DirectoryElementEntity> updatableEntities = getEntitiesCreatedBySameUser(repositoryService.findAllByIdInAndStashed(elementsUuid, true), notUpdatableEntities, userId);
-
-        // Collect all entities with their descendents in one list
-        List<DirectoryElementEntity> allEntities = updatableEntities.stream()
-                        .flatMap(entity -> Stream.concat(repositoryService.findAllDescendantsWithSameStashDate(entity.getId(), userId).stream(),
-                                                         Stream.of(entity)))
-                        .toList();
-
-        // Delete all elements
-        repositoryService.deleteElements(allEntities.stream().map(DirectoryElementEntity::getId).toList());
-
-        // Send notification for all deleted elements
-        allEntities.forEach(entity -> {
-            UUID parentUuid = entity.getParentId();
-            notificationService.emitDirectoryChanged(
-                    parentUuid == null ? entity.getId() : parentUuid,
-                    entity.getName(),
-                    userId,
-                    null,
-                    entity.getIsPrivate(),
-                    parentUuid == null,
-                    parentUuid == null ? NotificationType.DELETE_DIRECTORY : NotificationType.UPDATE_DIRECTORY
-            );
-            if (ElementType.STUDY.equals(entity.getType())) {
-                notificationService.emitDeletedStudy(entity.getId(), userId);
-            }
-        });
-        if (!notUpdatableEntities.isEmpty()) {
-            throw new DirectoryException(NOT_ALLOWED,
-                    String.format("Some or all of the elements can not be deleted : %s",
-                            String.join(", ", notUpdatableEntities.stream().map(DirectoryElementEntity::getName).toList())));
-        }
-    }
-
-    private List<DirectoryElementEntity> getEntitiesCreatedBySameUser(List<DirectoryElementEntity> entities,
-                                                                      List<DirectoryElementEntity> notUpdatableEntities,
-                                                                      String userId) {
-        return entities.stream()
-                .filter(entity -> {
-                    boolean isUpdatable = Objects.equals(userId, entity.getOwner());
-                    if (!isUpdatable) {
-                        notUpdatableEntities.add(entity);
+                .map(e -> {
+                    Optional<DirectoryElementInfos> elementAccessible = Optional.empty();
+                    List<ElementAttributes> path = getPath(e.getParentId());
+                    boolean isPathAccessible = isPathAccessible(userId, path);
+                    if (isPathAccessible) {
+                        Pair<List<UUID>, List<String>> uuidsAndNames = getUuidsAndNamesFromPath(path);
+                        e.setPathUuid(uuidsAndNames.getFirst());
+                        e.setPathName(uuidsAndNames.getSecond());
+                        elementAccessible = Optional.of(e);
                     }
-                    return isUpdatable;
+                    return elementAccessible;
                 })
-                .toList();
+                .flatMap(Optional::stream)
+                .collect(Collectors.toList());
     }
 }
